# EasyVizCNN

./: .gitignore  README.md  ex2.py  ex3.py  example-1.py  example-3.py  example.py  pyproject.toml  setup.py
easy_viz_cnn/: colors.py  layers.py  models.py  utils.py
tests/: conftest.py  test_feature_map.py
